--- a/css/styles.css
+++ b/css/styles.css
@@ -1,49 +1,40 @@
 * {
-    margin: 0;
-    padding: 0;
-}
+  margin: 0;
+  padding: 0; }
 
 body {
-    font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
-    font-size: 16px; 
-}
+  font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
+  font-size: 16px; }
 
 #video-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around; }
 
 .video-port {
-    max-width: 405px;
-    padding: 0em 1em;
-    border: 2px solid black;
-    border-radius: 10px;
-}
+  max-width: 405px;
+  padding: 0em 1em;
+  border: 2px solid black;
+  border-radius: 10px; }
 
 video {
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px; }
 
 .video-header {
-    text-align: center;
-    font-family: arial;
-    font-size: 1.25em;
-    padding: .5em;
-}
+  text-align: center;
+  font-family: arial;
+  font-size: 1.25em;
+  padding: .5em; }
 
 .control-panel {
-    padding: .5em;
-}
+  padding: .5em; }
 
 .status {
-    padding: .25em;
-}
+  padding: .25em; }
 
 button, input {
-    padding: .25em;
-}
+  padding: .25em; }
